--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,3 +1,4 @@
+{% set assetHash = global.random() %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{ metadata.title }}</title>
-    <!-- FOXYCART -->
-    <script data-cfasync="false" src="https://cdn.foxycart.com/dg2go/loader.js" async defer></script>
-    <!-- /FOXYCART -->
+
+    {# General critical styles #}
+    <style>{% include "css/critical.css" %}</style>
+
+    {# Add facility for pages to delare an array of critical styles #}
+    {% if pageCriticalStyles %}
+      {% for item in pageCriticalStyles %}
+        <style>{% include item %}</style>
+      {% endfor %}
+    {% endif %}
+
+    {# General stylesheets #}
+    <link rel="stylesheet" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'" />
+
+    {# Add facility for pages to declare an array of stylesheet paths #}
+    {% if pageStylesheets %}
+      {% for item in pageStylesheets %}
+        <link rel="stylesheet" media="print" href="{{ item }}?{{ assetHash }}" onload="this.media='all'" />
+      {% endfor %}
+    {% endif %}
   </head>
 
   <body>
