--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -1,1 +1,7 @@
+// First up: config and functions
+@import 'config';
+
+// Next: pull in gorko for design tokens
+@import '../../node_modules/gorko/gorko.scss';
+
 @import 'reset';
