--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -29,15 +29,15 @@
   </head>
 
   <body>
-
-    {% include "partials/site-head.html" %}
-    <script type="text/javascript">
-      console.log({{metadata | dump | safe}});
-    </script>
-    <h1>{{metadata.title}}</h1>
-    <main tabindex="-1" id="main-content">
-      {% block content %}{% endblock %}
-    </main>
-    
+    <div class="site-wrap">
+      {% include "partials/site-head.html" %}
+      <script type="text/javascript">
+        console.log({{metadata | dump | safe}});
+      </script>
+      <h1>{{metadata.title}}</h1>
+      <main tabindex="-1" id="main-content">
+        {% block content %}{% endblock %}
+      </main>
+    </div>
   </body>
 </html>
