basic responsive menu

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -18,6 +18,7 @@
     {% endif %}
 
     {# General stylesheets #}
+    <link rel="stylesheet" href="https://use.typekit.net/pxo6uwl.css">
     <link rel="stylesheet" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'" />
 
     {# Add facility for pages to declare an array of stylesheet paths #}
