--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -14,6 +14,7 @@ $gorko-base-size: 1rem;
  * your whole project.
  */
 $gorko-size-scale: (
+  '200': $gorko-base-size * 0.56,
   '300': $gorko-base-size * 0.75,
   '400': $gorko-base-size,
   '500': $gorko-base-size * 1.33,
@@ -36,12 +37,12 @@ $gorko-colors: (
   'light': #f9f4e3,
   'light-shade': #fff6d7,
   'light-glare': #fdfbf3,
-  'primary': #513aa6,
-  'primary-shade': #432e92,
-  'primary-glare': #654ac9,
-  'secondary': #6ac2b6,
-  'secondary-shade': #35a495,
-  'secondary-glare': #98e2d8,
+  'primary': #C7232D,
+  'primary-shade': #CA0000,
+  'primary-glare': #E82F17,
+  'secondary': #2E4E5E,
+  'secondary-shade': #032130,
+  'secondary-glare': #89A9A6,
   'tertiary': #ffd490,
   'tertiary-shade': #ffca77,
   'tertiary-glare': #ffdeaa,
@@ -78,6 +79,8 @@ $gorko-config: (
     'items': (
       'base': '"Literata", Georgia, serif',
       'sans': '"Red Hat Display", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif',
+      'headline': 'bookmania, "Times New Roman", serif',
+      // 'headline': 'corben, "Times New Roman", serif',
     ),
     'output': 'standard',
     'property': 'font-family',
