removed href from hamburger menu link

--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -65,7 +65,7 @@
      
 
       <label for="check" class="hamburger-menu__container">
-          <a class="hamburger-menu" href="#">
+          <a class="hamburger-menu">
               <div></div>
           </a>
       </label>
