--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,4 +1,5 @@
 {% set assetHash = global.random() %}
+{% set lang = global.getCurrentLanguage(page.url) %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,7 +19,16 @@
     {% endif %}
 
     {# General stylesheets #}
-    <link rel="stylesheet" href="https://use.typekit.net/pxo6uwl.css">
+    <script>
+      (function(d) {
+        var config = {
+          kitId: 'pxo6uwl',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
     <link rel="stylesheet" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'" />
 
     {# Add facility for pages to declare an array of stylesheet paths #}
@@ -27,6 +37,9 @@
         <link rel="stylesheet" media="print" href="{{ item }}?{{ assetHash }}" onload="this.media='all'" />
       {% endfor %}
     {% endif %}
+
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.7.3/dist/alpine.min.js" defer></script>
+    {# <script src="/js/main.js" #}
   </head>
 
   <body>
@@ -35,7 +48,7 @@
       <script type="text/javascript">
         console.log({{metadata | dump | safe}});
       </script>
-      <h1>{{metadata.title}}</h1>
+      <h1>{{metadata.title}} </h1>
       <main tabindex="-1" id="main-content">
         {% block content %}{% endblock %}
       </main>
