--- a/src/scss/blocks/_hamburger-menu.scss
+++ b/src/scss/blocks/_hamburger-menu.scss
@@ -15,6 +15,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: transparent;
+  border: none;
 }
 
 .hamburger-menu div{
@@ -39,27 +41,25 @@
 }
 
 .hamburger-menu div:before{
-  transform: translateY(-7px);
+  transform: translate(-13px, -7px);
 }
 
 .hamburger-menu div:after{
-  transform: translateY(7px);
+  transform: translate(-13px, 7px);
 }
 
-#check {
-  display: none;
-}
 
-#check:checked ~ .hamburger-menu__container .hamburger-menu div{
+
+.hamburger-menu[data-open="true"] div{
   background-color: transparent;
 }
 
-#check:checked ~ .hamburger-menu__container .hamburger-menu div:before{
-  transform: translateY(0) rotate(-45deg);
+.hamburger-menu[data-open="true"] div:before{
+  transform: translate(-13px, 0) rotate(-45deg);
 }
 
-#check:checked ~ .hamburger-menu__container .hamburger-menu div:after{
-  transform: translateY(0) rotate(45deg);
+.hamburger-menu[data-open="true"] div:after{
+  transform: translate(-13px, 0) rotate(45deg);
 }
 
 @keyframes animation{
