--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -1,7 +1,8 @@
 $heading-height: 7.2rem;
+$submenu-bg-color: get-color('light-glare');
+$mobileMenuItemBorder: 1px solid rgba(get-color('secondary'), 0.3);
 
 .nav {
-  display: flex; 
   line-height: 1;
   font-weight: 700;
   width: 100%;
@@ -11,20 +12,21 @@ $heading-height: 7.2rem;
   height: calc(100vh - #{$heading-height});
   top: $heading-height;
   left: 0;
-  background-color: get-color('light-glare');;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  background-color: get-color('light-shade');;
   overflow-x: hidden;
   overflow-y: auto;
   transform: translateX(100%);
   transition: .65s;
-
+  border-top: $mobileMenuItemBorder;
+  
+  
   &[data-open="true"]{
     transform: translateX(0);
   }
-
+  
   @include media-query('md') {
+    display: flex; 
+    border-top: none;
     padding: 0 get-size('400');
     display: block;
     position: static;
@@ -38,38 +40,51 @@ $heading-height: 7.2rem;
   
   &__list {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: stretch;
+    justify-items: center;
+    
+    @include media-query('md') {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-direction: row;
+    }
 
     > li {
-      padding: get-size('400');
-      border-bottom: 1px solid rgba(get-color('secondary'), 0.3);
-
+      border-bottom: $mobileMenuItemBorder;
+      flex: 1;
+      position: relative;
+      
       @include media-query('md') {
         border: none;
+        padding: get-size('400');
+      }
+
+      > a, > button {
+        width: 100%;
+        background: none;
+        border: none;
+        cursor: pointer;
+        text-decoration: none;
+        display: block;
+        position: relative;
+        color: get-color('secondary');
+        padding: get-size('300') get-size('300');;
+        text-align: left;
+        
+        &:hover {
+          transform: scale(1.1);
+          transition: .1s;
+          color: get-color('primary');
+        }
+        @include media-query('md') {
+          text-align: center;
+        }
       }
     }
 
-    @include media-query('md') {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-    }
-  }
-
-  a {
-    text-decoration: none;
-    display: block;
-    position: relative;
-    color: get-color('secondary');
     
-    &:hover {
-      transform: scale(1.1);
-      transition: .1s;
-      color: get-color('primary');
-    }
-
+    
+      
     // Adds the fake border to active state items
     &[data-state='active'],
     &[aria-current='page'] {
@@ -87,10 +102,10 @@ $heading-height: 7.2rem;
     }
   }
 
-  &__brand {
+  li.nav__brand {
     display: none;
     position: relative;
-    width: 100px;
+    width: 100%;
 
     @include media-query('md') {
       display: block;
@@ -99,15 +114,66 @@ $heading-height: 7.2rem;
     a {
       display: block;
       position: absolute;    
-      bottom: 0;
+      bottom: -30px;
       left: 0px;
       width: 120px;
       height: 120px;
       display: block;
-      height: 100px;
      }
-
-    
   }
+
+  ul.nav__submenu {    
+    background-color: $submenu-bg-color;
+    position: relative;
+    
+    @include media-query('md') {
+      padding: get-size('400');
+      width: 10rem;
+      position: absolute;
+      top: 100%;
+      left: get-size('600');
+      box-shadow: 
+      0 2px 4px rgba(get-color('secondary'), 0.05),
+      0 2px 18px 3px rgba(get-color('secondary'), 0.1);
+    }
+
+    .arrow{
+      position: absolute;
+      width: 11px;
+      height: 11px;
+      top: -5.5px;
+      left: 32px;
+      background-color: $submenu-bg-color;
+      transform: rotate(45deg);
+      cursor: pointer;
+      transition: .3s;
+      border-top: $mobileMenuItemBorder;
+      border-left: $mobileMenuItemBorder;
+      z-index: 3;
+
+      @include media-query('md') {
+        border: none;
+      }
+    }
+
+    li {
+      border-top: $mobileMenuItemBorder;
+      @include media-query('md') {
+        border-top: none;
+      }
+    }
+
+    a {
+      font-size: 1rem;
+      padding: get-size('200') get-size('500');;
+      display: block;
+      text-decoration: none;
+      // text-transform: uppercase;
+      // letter-spacing: 0.05em;
+      font-weight: 400;
+      line-height: 1.3;
+    }
+  }
+  
 }
 
