--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -60,24 +60,38 @@ $mobileMenuItemBorder: 1px solid rgba(get-color('secondary'), 0.3);
       }
 
       > a, > button {
+        outline-offset: -0.25rem;
         width: 100%;
         background: none;
         border: none;
         cursor: pointer;
         text-decoration: none;
-        display: block;
+        display: flex;
+        align-items: center;
         position: relative;
         color: get-color('secondary');
         padding: get-size('300') get-size('300');;
         text-align: left;
         
+
+        svg {
+          width: 1rem;
+          height: 1rem;
+          transform: translateY(2px);
+          margin-left: 0.25rem;
+        }
+        
         &:hover {
-          transform: scale(1.1);
-          transition: .1s;
           color: get-color('primary');
         }
         @include media-query('md') {
+          outline-offset: 0.25rem;
           text-align: center;
+          &:hover {
+            transform: scale(1.1);
+            transition: .1s;
+            color: get-color('primary');
+          }
         }
       }
     }
@@ -128,7 +142,7 @@ $mobileMenuItemBorder: 1px solid rgba(get-color('secondary'), 0.3);
     
     @include media-query('md') {
       padding: get-size('400');
-      width: 10rem;
+      width: 12rem;
       position: absolute;
       top: 100%;
       left: get-size('600');
